--- a/front-end/src/components/Header/Header.css
+++ b/front-end/src/components/Header/Header.css
@@ -1,8 +1,9 @@
 .header-container {
     display: flex;
     justify-content: center;
-    position: sticky;
+    position: fixed;
     top: 10px;
+    width: 100%;
     z-index: 1;
 }
 
