implemented CRUD for product and refactor some api stuff

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -17,6 +17,7 @@
   --thin-pink: #FAC4E4;
   --bold-pink: #460B2E;
   --blue: #6B90FF;
+  --blue-text: #9AB3FF;
   --black: black;
   --red: #D94A4C;
 }
