--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -12,6 +12,11 @@ button {
     cursor: pointer;
 }
 
+button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 a {
     text-decoration: none;
 }
